{
    "name": "Gameplay",
    "maps": [
        {
            "name": "Ship",
            "id": "14af707f-1162-4357-bdc5-afa28fe1736e",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "49815dec-d5c0-44f2-914f-81604cf6502e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnShip",
                    "type": "Button",
                    "id": "3a788d1f-de62-49f9-b575-52a29c1ee7fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Nitro",
                    "type": "Button",
                    "id": "46d22155-02ee-40f0-8228-6321c4bdd32c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootForward",
                    "type": "Button",
                    "id": "09059a09-72b0-4214-94c4-486f9b5a3671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootRight",
                    "type": "Button",
                    "id": "422505d0-05fd-4272-82a1-ef8248a8cf59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootLeft",
                    "type": "Button",
                    "id": "7d3b5aa4-102d-4d7d-a016-dd2ae4dbbd36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee11f565-5620-406d-8875-d1f53bd09d66",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "91980f3f-e1b4-4410-8dbd-d419df9a6a34",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnShip",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0b8f2f4e-dfd0-43ab-87be-2faa92084e56",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "89e8571c-63d8-4007-ac64-f4d1002e7fe8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "532e9777-7788-4715-a045-22c65e488801",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nitro",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27ee63a8-a5a4-4540-8fca-d88fd4980553",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c4c16d4-5c9f-4a04-a894-6f689f6bb21e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7506ed3-f59e-4a4d-badb-a9bbf0b13076",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}